--- a/src/App.css
+++ b/src/App.css
@@ -2,5 +2,5 @@
   box-sizing: border-box;
   margin: 0;
   padding: 0;
-  font-family: "montserrat-regular", sans-serif;
+  font-family: 'Lato', sans-serif;
 }
