--- a/src/components/igs/IGS_Youtube/styles.css
+++ b/src/components/igs/IGS_Youtube/styles.css
@@ -168,11 +168,11 @@
 }
 
 .react-multi-carousel-dot button:hover:active {
-    background: #ff6c00
+    background: #C6182F
 }
 
 .react-multi-carousel-dot--active button {
-    background: #ff6c00
+    background: #C6182F
 }
 
 .react-multi-carousel-item {
@@ -189,4 +189,69 @@
     .react-multi-carousel-track {
         overflow: visible !important
     }
+}
+
+.cont{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content:center;
+    margin-top: 50px;
+    border-top: 3px solid white;
+    border-bottom: 3px solid white;
+}
+.left{
+    width: 600px;
+}
+.up{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    margin-top: 40px;
+    align-items: flex-end;
+}
+.below{
+    margin-top: 10px;
+}
+.text{
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 15px;
+    letter-spacing: 1px;
+    word-spacing: 0.4px;
+    color: #000000;
+    font-weight: normal;
+    text-decoration: none;
+    font-style: normal;
+    font-variant: normal;
+    text-transform: none;
+    color: whitesmoke;
+}
+.right{
+    width: 600px;
+    padding-top: 40px;
+    padding-left: 50px;
+    padding-bottom: 40px;
+}
+.textTit{
+    display: flex;
+    flex-direction: column;
+    align-items: baseline;
+    margin-left: 30px;
+}
+#tit1{
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-size: 25px;
+    color: whitesmoke;
+}
+#tit2{
+    margin-top: auto;
+    font-size: 35px;
+    font-family:Verdana, Geneva, Tahoma, sans-serif ;
+    color: whitesmoke;
+}
+#tit3{
+    margin-top: auto;
+    font-family:Verdana, Geneva, Tahoma, sans-serif;
+    font-size: 22px;
+    color: whitesmoke;
 }
