Bhai bht kaam karwa dia

--- a/src/components/Slider/styles.css
+++ b/src/components/Slider/styles.css
@@ -92,10 +92,11 @@
 }
 
 .react-multi-carousel-dot button {
-    display: inline-block;
-    width: 40px;
+    /*display: inline-block;*/
+    display: none;
+    width: 5px;
     height: 5px;
-    border-radius: 0;
+    border-radius: 100%;
     opacity: 1;
     padding: 5px 5px 5px 5px;
     box-shadow: none;
