--- a/src/components/YoutubeIGS/styles.css
+++ b/src/components/YoutubeIGS/styles.css
@@ -1,12 +1,10 @@
-.car{
+.pak{
     width: 70%;
     margin-left: auto;
     margin-right: auto;
     z-index:2;
     
   }
-
-
 
 .react-multi-carousel-list {
     display: flex;
@@ -31,11 +29,12 @@
 .react-multiple-carousel__arrow {
     position: absolute;
     outline: 0;
+    top: 90%;
     transition: all .5s;
     border-radius: 35px;
     z-index: 1000;
     border: 0;
-    background: rgba(247, 244, 244, 0.2);
+    background: rgba(8, 8, 8, 0.5);
     min-width: 43px;
     min-height: 43px;
     opacity: 1;
@@ -63,7 +62,7 @@
 }
 
 .react-multiple-carousel__arrow--left {
-    left: calc(1% - 13px)
+    left: calc(10% - 13px)
 }
 
 .react-multiple-carousel__arrow--left::before {
@@ -93,11 +92,10 @@
 }
 
 .react-multi-carousel-dot button {
-    /*display: inline-block;*/
-    display: none;
-    width: 5px;
+    display: inline-block;
+    width: 40px;
     height: 5px;
-    border-radius: 100%;
+    border-radius: 0;
     opacity: 1;
     padding: 5px 5px 5px 5px;
     box-shadow: none;
@@ -117,36 +115,36 @@
     .react-multi-carousel-dot button {
         width: 20px;
     }
-    .car{
-        width: 70%;
-        margin-left: auto;
-        margin-right: auto;
-        z-index:2;
+    .pak{
+        width: 80%;
+        height: 500px;
         
       }
       .react-multiple-carousel__arrow--left {
-        left: calc(3.5% + 1px);
-        display:none;
+        left: calc(3.5% + 1px)
+    }
+    .react-multiple-carousel__arrow {
+       
+        top: 60%; 
+        
     }
 }
 @media only screen and (max-width: 600px){
     .react-multi-carousel-dot button {
         width: 20px;
     }
-    .car{
-        width: 70%;
-        margin-left: auto;
-        margin-right: auto;
-        z-index:2;
+    .pak{
+        width: 80%;
+        height: 1000px;
         
       }
-      .react-multiple-carousel__arrow--right {
-        display:none;
-    }
-      
       .react-multiple-carousel__arrow--left {
-        left: calc(3.5% + 1px);
-        display:none;
+        left: calc(3.5% + 1px)
+    }
+    .react-multiple-carousel__arrow {
+       
+        top: 60%; 
+        
     }
 }
 @media only screen and (max-width: 425px){
@@ -154,15 +152,18 @@
     .react-multi-carousel-dot button {
         width: 20px;
     }
-    .car{
-        width: 70%;
-        margin-left: auto;
-        margin-right: auto;
-        z-index:2;
+    .pak{
+        width: 80%;
+        height: 1000px;
         
       }
       .react-multiple-carousel__arrow--left {
-        display:none;
+        left: calc(3.5% + 1px)
+    }
+    .react-multiple-carousel__arrow {
+       
+        top: 60%; 
+        
     }
 }
 
