--- a/src/components/igs/IGS_Youtube/styles.css
+++ b/src/components/igs/IGS_Youtube/styles.css
@@ -148,6 +148,9 @@
         top: 60%; 
         
     }
+    .carousel-item-padding-80-px{
+        padding-left: 200px;
+    }
 }
 @media only screen and (max-width: 425px){
     /*Small smartphones [325px -> 425px]*/
