--- a/src/components/Speaker/styles.css
+++ b/src/components/Speaker/styles.css
@@ -80,7 +80,7 @@
 
 .react-multi-carousel-dot-list {
     position: absolute;
-    bottom: 0;
+    /* bottom: 0;
     display: flex;
     left: 0;
     right: 0;
@@ -89,14 +89,14 @@
     padding: 0;
     margin: 0;
     list-style: none;
-    text-align: center
+    text-align: center */
 }
 
 .react-multi-carousel-dot button {
     display: inline-block;
-    width: 40px;
+    /* width: 5px;
     height: 5px;
-    border-radius: 0;
+    border-radius: 100%;
     opacity: 1;
     padding: 5px 5px 5px 5px;
     box-shadow: none;
@@ -104,18 +104,16 @@
     border-width: 0.5px;
     border-style: solid;
     border-color: grey;
-    padding: 0;
+    padding: 10px;
     margin: 0;
     margin-right: 6px;
     outline: 0;
-    cursor: pointer;
+    cursor: pointer; */
   
 }
 @media only screen and (max-width: 1200px){
     /*Tablets [601px -> 1200px]*/
-    .react-multi-carousel-dot button {
-        width: 20px;
-    }
+    
     .car{
         width: 50%;
         margin-left: auto;
@@ -128,9 +126,7 @@
     }
 }
 @media only screen and (max-width: 600px){
-    .react-multi-carousel-dot button {
-        width: 20px;
-    }
+    
     .car{
         width: 50%;
         margin-left: auto;
@@ -144,9 +140,7 @@
 }
 @media only screen and (max-width: 425px){
     /*Small smartphones [325px -> 425px]*/
-    .react-multi-carousel-dot button {
-        width: 20px;
-    }
+    
     .car{
         width: 50%;
         margin-left: auto;
