--- a/src/components/Slider/styles.css
+++ b/src/components/Slider/styles.css
@@ -18,14 +18,14 @@
 .react-multi-carousel-track {
     
     list-style: none;
-    padding: 0;
+    /* padding: 0;
     margin: 0;
     display: flex;
     flex-direction: row;
     position: relative;
     transform-style: preserve-3d;
     backface-visibility: hidden;
-    will-change: transform, transition
+    will-change: transform, transition */
 }
 
 .react-multiple-carousel__arrow {
@@ -80,7 +80,7 @@
 
 .react-multi-carousel-dot-list {
     position: absolute;
-    bottom: 0;
+    /* bottom: 0;
     display: flex;
     left: 0;
     right: 0;
@@ -89,13 +89,13 @@
     padding: 0;
     margin: 0;
     list-style: none;
-    text-align: center
+    text-align: center */
 }
 
 .react-multi-carousel-dot button {
     /*display: inline-block;*/
     display: none;
-    width: 5px;
+    /* width: 5px;
     height: 5px;
     border-radius: 100%;
     opacity: 1;
@@ -110,13 +110,11 @@
     margin-right: 6px;
     outline: 0;
     cursor: pointer;
-  
+   */
 }
 @media only screen and (max-width: 1200px){
     /*Tablets [601px -> 1200px]*/
-    .react-multi-carousel-dot button {
-        width: 20px;
-    }
+    
     .car{
         width: 70%;
         margin-left: auto;
@@ -130,9 +128,7 @@
     }
 }
 @media only screen and (max-width: 600px){
-    .react-multi-carousel-dot button {
-        width: 20px;
-    }
+    
     .car{
         width: 70%;
         margin-left: auto;
@@ -151,9 +147,7 @@
 }
 @media only screen and (max-width: 425px){
     /*Small smartphones [325px -> 425px]*/
-    .react-multi-carousel-dot button {
-        width: 20px;
-    }
+    
     .car{
         width: 70%;
         margin-left: auto;
