--- a/src/components/igs/IGS_Youtube/styles.css
+++ b/src/components/igs/IGS_Youtube/styles.css
@@ -87,25 +87,25 @@
     right: 0;
     justify-content: center;
     margin: auto;
-    padding: 0;
-    margin: 0;
+    padding: 0px;
+    margin-bottom: 50px;
     list-style: none;
     text-align: center
 }
 
 .react-multi-carousel-dot button {
     display: inline-block;
-    width: 40px;
-    height: 5px;
-    border-radius: 0;
+    width: 10px;
+    height: 10px;
+    border-radius: 100%;
     opacity: 1;
     padding: 5px 5px 5px 5px;
     box-shadow: none;
     transition: background .5s;
-    border-width: 0.5px;
+    border-width: 0.0px;
     border-style: solid;
     border-color: grey;
-    padding: 0;
+    padding:0;
     margin: 0;
     margin-right: 6px;
     outline: 0;
@@ -114,9 +114,6 @@
 }
 @media only screen and (max-width: 1200px){
     /*Tablets [601px -> 1200px]*/
-    .react-multi-carousel-dot button {
-        width: 20px;
-    }
     .pak{
         width: 80%;
         height: 500px;
@@ -132,12 +129,11 @@
     }
 }
 @media only screen and (max-width: 600px){
-    .react-multi-carousel-dot button {
-        width: 20px;
-    }
+    
     .pak{
         width: 80%;
-        height: 1000px;
+        height: 800px;
+
         
       }
       .react-multiple-carousel__arrow--left {
@@ -154,9 +150,7 @@
 }
 @media only screen and (max-width: 425px){
     /*Small smartphones [325px -> 425px]*/
-    .react-multi-carousel-dot button {
-        width: 20px;
-    }
+    
     .pak{
         width: 80%;
         height: 1000px;
