--- a/src/App.css
+++ b/src/App.css
@@ -4,3 +4,135 @@
   padding: 0;
   font-family: 'Lato', sans-serif;
 }
+
+
+
+
+.scroll{
+  overflow-y: scroll; 
+  height:550px;
+  
+   scrollbar-width: 3px;
+   margin-bottom:30px ;
+}
+
+
+
+
+.scroll::-webkit-scrollbar {
+  width: 8px;
+}
+
+.scroll::-webkit-scrollbar-track {
+
+  box-shadow: 0 0 6px ;
+  -webkit-box-shadow: inset 0px 1px 6px rgb(110, 110, 110);  
+  border-radius: 10px;
+}
+
+.scroll::-webkit-scrollbar-thumb {
+  
+  border-radius: 10px;
+  box-shadow: 0 0 6px;
+  -webkit-box-shadow: inset 6px 6px 6px 6px orange ; 
+}
+
+.main_box{
+  margin: 40px 40px;
+  height: 100%;
+  
+}
+  
+  .workshop_img{
+      width: 100%;
+      height: 200px;
+      margin-bottom: 20px;
+      margin-top: 0 ;
+  }
+  .rightbox{
+    padding-top: 20px;
+    padding-left: 20px;
+    padding-bottom: 40px;
+  }
+
+
+
+h5{
+  margin: 0;
+  padding: 0;
+}
+
+.author_name{
+  padding: 0;
+  font-size: 1rem;
+}
+a{
+  
+  text-decoration: none;
+}
+a p{
+  
+  color: rgb(255, 136, 0);
+  text-align: right;
+  font-family: 'Rubik', sans-serif;
+}
+
+.table{
+  margin: 0;
+  padding: 0;
+  height: 0px;
+}
+
+.table_text{
+  font-size: 14px;
+  width: 100%;
+  margin: 0;
+  padding: 0;
+}
+.table_link{
+  color: rgb(255, 136, 0);
+  position: relative;
+  top: 0px;
+  cursor: pointer;
+  display: inline;
+  margin: 0;
+  padding: 0;
+}
+a{
+  text-decoration: none;
+}
+.td_right{
+  width: 15%;
+  vertical-align: bottom;
+}
+.td_left{
+  width: 75%;
+  margin: 0;
+  padding: 0;
+}
+td{
+  margin: 0;
+  padding: 0;
+}
+tr{
+  margin: 0;
+  padding:0 ;
+}
+
+h6{
+  display: inline;
+}
+
+.author_button_link{
+  color: rgb(255, 136, 0);
+  cursor: pointer;
+  /* float: right; */
+  padding: 0;
+  margin:0 15px;
+}
+.authorwork{
+  margin: 0;
+  padding: 0;
+  width: 100%;
+
+}
