--- a/src/App.css
+++ b/src/App.css
@@ -60,11 +60,12 @@
   }
 
   
- img{
+ /* img{
       width: 100%;
       height: 150px;
       margin-bottom: 20px;
-  }
+  } */
+  
   .right{
       padding:0 10px ;
     }
