--- a/src/App.css
+++ b/src/App.css
@@ -48,28 +48,20 @@
       width: 100%;
       height: 200px;
       margin-bottom: 20px;
-      margin-top: 0 ;
+     
   }
   .rightbox{
-    padding-top: 20px;
-    padding-left: 20px;
+    padding-top: 0px;
+    padding-left: 0px;
     padding-bottom: 40px;
-      margin: 20px 25px;
-  height: 100%;
+    margin: 20px 25px;
+    height: 100%;
   
   }
 
   
- /* img{
-      width: 100%;
-      height: 150px;
-      margin-bottom: 20px;
-  } */
+ 
   
-  .right{
-      padding:0 10px ;
-    }
-
 
 h5{
   margin: 0;
@@ -93,7 +85,7 @@ a p{
 
 .table{
   margin: 0;
-  padding: 0;
+  padding: 10px;
   height: 0px;
 }
 
@@ -146,17 +138,8 @@ h6{
   margin:0 15px;
 }
 .authorwork{
-  margin: 0;
-  padding: 0;
   width: 100%;
-
+  margin-left: 15px;
   float: right;
-  padding: 0;
-  margin:0 15px;
-}
-.author_rightSide_work{
-  margin: 0;
-  padding: 0;
  
-
 }
