--- a/src/components/AboveFooter/AboveFooter.css
+++ b/src/components/AboveFooter/AboveFooter.css
@@ -1,13 +1,15 @@
 h4{
     text-align: center;
-    font-size: small;
+    font-size: smaller;
+    padding-right: 100px;
+    padding-left: 100px;
+    padding-bottom: 30px;
 }
 button{
     margin: 20px;
-    margin-bottom: 30px;
     padding: 7px 25px;
-    border-radius: 5px;
     color: #664AA6;
+    box-shadow:  0 3px 10px rgb(0 0 0 / 0.2);;
     background-color: white;
     border-color: #664AA6;
     border-width: 1px;
@@ -15,4 +17,18 @@ button{
 .kmcs:hover{
     color: white;
     background-color: #664AA6;
+}
+.kmcs2:hover{
+    color: white;
+    background-color: #664AA6;
+}
+.kmcs{
+    margin-bottom: 20px;
+    margin-right: 100px;
+    border-radius: 6px;
+}
+.kmcs2{
+    margin-bottom: 20px;
+    margin-right: 100px;
+    border-radius: 6px;
 }
