--- a/src/App.css
+++ b/src/App.css
@@ -149,7 +149,9 @@ h6{
 
 html{box-sizing:border-box}*,*:before,*:after{box-sizing:inherit}
 
-html{-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%}body{margin:0}
+html{-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%}body{
+  margin:0;
+  overflow-x: hidden;}
 article,aside,details,figcaption,figure,footer,header,main,menu,nav,section{display:block}summary{display:list-item}
 audio,canvas,progress,video{display:inline-block}progress{vertical-align:baseline}
 audio:not([controls]){display:none;height:0}[hidden],template{display:none}
@@ -431,7 +433,6 @@ body, html {
     padding: 20px 20px;
     margin-left: 5%;
 }
-
 .aboutHead
 {
     font-family: "Cinzel";
@@ -469,4 +470,17 @@ body, html {
  background-position: center;
  background-size: cover;
  
+}
+.twitter{
+  margin-left: 150px;
+}
+@media (max-width: 480px) {
+  #about{
+    max-width: 100% !important; 
+    margin-left: 0% !important;
+    margin-bottom: 150px;
+  }
+  .twitter{
+    margin-left: 10px !important;
+  }
 }
