--- a/src/components/AboveFooter/AboveFooter.css
+++ b/src/components/AboveFooter/AboveFooter.css
@@ -5,6 +5,12 @@ h4{
     padding-left: 100px;
     padding-bottom: 30px;
 }
+.button-container{
+    display: flex;
+    justify-content: center;
+    align-content: center;
+    margin-bottom: 30px;
+}
 button{
     margin: 20px;
     padding: 7px 25px;
@@ -23,12 +29,9 @@ button{
     background-color: #664AA6;
 }
 .kmcs{
-    margin-bottom: 20px;
-    margin-right: 100px;
+    margin-right: 20px;
     border-radius: 6px;
 }
 .kmcs2{
-    margin-bottom: 20px;
-    margin-right: 100px;
     border-radius: 6px;
 }
