--- a/src/components/igs/IGS_Youtube/styles.css
+++ b/src/components/igs/IGS_Youtube/styles.css
@@ -1,288 +1,292 @@
 .pak {
-    max-width: 100%;
-    width: 100%;
-    margin-left: auto;
-    padding: 5px;
-    margin-right: auto;
-    z-index: 2;
+  max-width: 100%;
+  width: 100%;
+  margin-left: auto;
+  padding: 5px;
+  margin-right: auto;
+  z-index: 2;
+}
+
+.react-multi-carousel-list {
+  display: flex;
+  align-items: center;
+  overflow: hidden;
+  position: relative;
+}
+
+.react-multi-carousel-track {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+  display: flex;
+  flex-direction: row;
+  position: relative;
+  transform-style: preserve-3d;
+  backface-visibility: hidden;
+  will-change: transform, transition;
+  /* overflow: auto; */
+}
+
+.react-multiple-carousel__arrow {
+  position: absolute;
+  outline: 0;
+  top: 90%;
+  transition: all 0.5s;
+  border-radius: 35px;
+  z-index: 1000;
+  border: 0;
+  background: rgba(8, 8, 8, 0.5);
+  min-width: 43px;
+  min-height: 43px;
+  opacity: 1;
+  cursor: pointer;
+}
+
+.react-multiple-carousel__arrow:hover {
+  z-index: 1000;
+  background: rgba(0, 0, 0, 0.8);
+}
+
+.react-multiple-carousel__arrow::before {
+  z-index: 1000;
+  font-size: 20px;
+  color: #fff;
+  display: block;
+  font-family: revicons;
+  text-align: center;
+  z-index: 2;
+  position: relative;
+}
+
+.react-multiple-carousel__arrow:disabled {
+  cursor: default;
+  background: rgba(0, 0, 0, 0.5);
+}
+
+.react-multiple-carousel__arrow--left {
+  left: calc(2% - 13px);
+}
+
+.react-multiple-carousel__arrow--left::before {
+  content: "\e824";
+}
+
+.react-multiple-carousel__arrow--right {
+  right: calc(2% + 1px);
+}
+
+.react-multiple-carousel__arrow--right::before {
+  content: "\e825";
+}
+
+.react-multi-carousel-dot-list {
+  position: absolute;
+  bottom: 0;
+  display: flex;
+  max-width: 80%;
+  left: 0;
+  right: 0;
+  justify-content: center;
+  margin: auto;
+  padding: 0px;
+  margin-bottom: 50px;
+  list-style: none;
+  text-align: center;
+}
+
+.react-multi-carousel-dot button {
+  display: inline-block;
+  width: 10px;
+  height: 10px;
+  border-radius: 100%;
+  opacity: 1;
+  padding: 5px 5px 5px 5px;
+  box-shadow: none;
+  transition: background 0.5s;
+  border-width: 0px;
+  border-style: solid;
+  border-color: grey;
+  padding: 0;
+  margin: 0;
+  margin-right: 6px;
+  outline: 0;
+  cursor: pointer;
+}
+@media only screen and (max-width: 1200px) {
+  /*Tablets [601px -> 1200px]*/
+  .pak {
+    width: 90%;
+    height: 800px;
   }
-  
-  .react-multi-carousel-list {
-    display: flex;
-    align-items: center;
-    overflow: hidden;
-    position: relative;
-  }
-  
-  .react-multi-carousel-track {
-    list-style: none;
-    padding: 0;
-    margin: 0;
-    display: flex;
-    flex-direction: row;
-    position: relative;
-    transform-style: preserve-3d;
-    backface-visibility: hidden;
-    will-change: transform, transition;
-    /* overflow: auto; */
-  }
-  
-  .react-multiple-carousel__arrow {
-    position: absolute;
-    outline: 0;
-    top: 90%;
-    transition: all 0.5s;
-    border-radius: 35px;
-    z-index: 1000;
-    border: 0;
-    background: rgba(8, 8, 8, 0.5);
-    min-width: 43px;
-    min-height: 43px;
-    opacity: 1;
-    cursor: pointer;
-  }
-  
-  .react-multiple-carousel__arrow:hover {
-    z-index: 1000;
-    background: rgba(0, 0, 0, 0.8);
-  }
-  
-  .react-multiple-carousel__arrow::before {
-    z-index: 1000;
-    font-size: 20px;
-    color: #fff;
-    display: block;
-    font-family: revicons;
-    text-align: center;
-    z-index: 2;
-    position: relative;
-  }
-  
-  .react-multiple-carousel__arrow:disabled {
-    cursor: default;
-    background: rgba(0, 0, 0, 0.5);
-  }
-  
   .react-multiple-carousel__arrow--left {
-    left: calc(2% - 13px);
+    left: calc(1% + 1px);
   }
-  
-  .react-multiple-carousel__arrow--left::before {
-    content: "\e824";
+  .react-multiple-carousel__arrow {
+    top: 60%;
   }
-  
-  .react-multiple-carousel__arrow--right {
-    right: calc(2% + 1px);
+}
+@media only screen and (max-width: 900px) {
+  .pak {
+    width: 90%;
+    /* height: 800px; */
   }
-  
-  .react-multiple-carousel__arrow--right::before {
-    content: "\e825";
+  .react-multiple-carousel__arrow--left {
+    left: calc(1.5% + 1px);
   }
-  
-  .react-multi-carousel-dot-list {
-    position: absolute;
-    bottom: 0;
-    display: flex;
-    max-width: 80%;
-    left: 0;
-    right: 0;
-    justify-content: center;
-    margin: auto;
-    padding: 0px;
-    margin-bottom: 50px;
-    list-style: none;
-    text-align: center;
+  .react-multiple-carousel__arrow {
+    top: 60%;
   }
-  
-  .react-multi-carousel-dot button {
-    display: inline-block;
-    width: 10px;
-    height: 10px;
-    border-radius: 100%;
-    opacity: 1;
-    padding: 5px 5px 5px 5px;
-    box-shadow: none;
-    transition: background 0.5s;
-    border-width: 0px;
-    border-style: solid;
-    border-color: grey;
-    padding: 0;
-    margin: 0;
-    margin-right: 6px;
-    outline: 0;
-    cursor: pointer;
+  .carousel-item-padding-80-px {
+    padding-left: 0px;
   }
-  @media only screen and (max-width: 1200px) {
-    /*Tablets [601px -> 1200px]*/
-    .pak {
-      width: 90%;
-      height: 800px;
-    }
-    .react-multiple-carousel__arrow--left {
-      left: calc(1% + 1px);
-    }
-    .react-multiple-carousel__arrow {
-      top: 60%;
-    }
+}
+@media only screen and (max-width: 425px) {
+  /*Small smartphones [325px -> 425px]*/
+
+  .pak {
+    width: 90%;
+    height: 1000px;
   }
-  @media only screen and (max-width: 900px) {
-    .pak {
-      width: 90%;
-      /* height: 800px; */
-    }
-    .react-multiple-carousel__arrow--left {
-      left: calc(1.5% + 1px);
-    }
-    .react-multiple-carousel__arrow {
-      top: 60%;
-    }
-    .carousel-item-padding-80-px {
-      padding-left: 15px;
-    }
+  .react-multiple-carousel__arrow--left {
+    left: calc(1% + 1px);
   }
-  @media only screen and (max-width: 425px) {
-    /*Small smartphones [325px -> 425px]*/
-  
-    .pak {
-      width: 90%;
-      height: 1000px;
-    }
-    .react-multiple-carousel__arrow--left {
-      left: calc(1% + 1px);
-    }
-    .react-multiple-carousel__arrow {
-      top: 60%;
-    }
+  .react-multiple-carousel__arrow {
+    top: 60%;
   }
-  
-  .react-multi-carousel-dot button:hover:active {
-    background: #c6182f;
-  }
-  
-  .react-multi-carousel-dot--active button {
-    background: #c6182f;
-  }
-  
+}
+
+.react-multi-carousel-dot button:hover:active {
+  background: #c6182f;
+}
+
+.react-multi-carousel-dot--active button {
+  background: #c6182f;
+}
+
+.react-multi-carousel-item {
+  transform-style: preserve-3d;
+  backface-visibility: hidden;
+}
+
+@media all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
   .react-multi-carousel-item {
-    transform-style: preserve-3d;
-    backface-visibility: hidden;
+    flex-shrink: 0 !important;
   }
+
+  .react-multi-carousel-track {
+    overflow: visible !important;
+  }
+}
+/*style for carousel*/
+.YoutubeContainer {
+  position: relative;
+  color: #fff;
+  padding-top: 4% 2% 2% 2%;
+  margin-bottom: 20px;
+  /* z-index: 0; */
+  display: block;
+  overflow: auto;
+  height: 100%;
+  background: linear-gradient(90deg, #2F3E41 10.31%, #273132 35.06%, #1E2422 71.4%, #1B1F1C 99.48%);
   
-  @media all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
-    .react-multi-carousel-item {
-      flex-shrink: 0 !important;
-    }
-  
-    .react-multi-carousel-track {
-      overflow: visible !important;
-    }
-  }
-  /*style for carousel*/
-  .YoutubeContainer {
-    position: relative;
-    color: #fff;
-    padding-top: 4% 2% 2% 2%;
-    margin-bottom: 20px;
-    /* z-index: 0; */
-    display: block;
-    overflow: auto;
-    height: 100%;
-    background: linear-gradient(234.33deg, #38218F -1.43%, #B18DCB 173.26%);
-    
-  }
+}
+#sessions{
+  background: linear-gradient(90deg, #2F3E41 10.31%, #273132 35.06%, #1E2422 71.4%, #1B1F1C 99.48%);
+}
+.YoutubeWrapper {
+  display: flex;
+  z-index: 1;
+  width: 100%;
+  padding: 40px 24px;
+  justify-content: center;
+  flex-wrap: wrap;
+  text-align: center;
+  background: linear-gradient(90deg, #2F3E41 10.31%, #273132 35.06%, #1E2422 71.4%, #1B1F1C 99.48%);
+
+}
+.Speaker img {
+  align-content: center;
+  height: 200px;
+  width: 180px;
+  border-radius: 16px;
+}
+.TextWrapper {
+  /* position: relative; */
+
+  display: flex;
+  flex: 53%;
+  padding: 10px;
+  justify-content: center;
+  flex-direction: column;
+}
+.YoutubeImg {
+  flex: 45%;
+  width: 100%;
+  margin: 8px;
+}
+
+.info {
+  display: flex;
+  flex-wrap: wrap;
+  /* flex-direction: row; */
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  align-items: flex-end;
+}
+
+.Content {
+  text-align: left;
+}
+.Speaker {
+  flex: 30%;
+  position: relative;
+  padding: 5px;
+}
+.Speakerbio {
+  flex: 68%;
+  padding: 5px;
+  text-align: left;
+}
+
+.ImgWrap {
+  width: 100%;
+  height: 0;
+  position: relative;
+  padding-top: 67%; /* 9 / 16 * 100 */
+}
+.ImgWrap > iframe {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  border: 0;
+}
+/* responsiveness for 900px*/
+@media screen and (max-width: 900px) {
   .YoutubeWrapper {
-    display: flex;
-    z-index: 1;
-    width: 100%;
-    padding: 40px 24px;
-    justify-content: center;
-    flex-wrap: wrap;
+    flex-direction: column;
+    padding: 15px;
+    margin-top: 20px;
+  }
+  .TextWrapper {
+    flex: 100%;
+    /* text-align: center;
+        align-items: center;
+        align-content: center; */
+    /* auto-align: center; */
+  }
+  .YoutubeImg {
+    flex: 100%;
     text-align: center;
+    align-items: center;
+    align-content: center;
   }
   .Speaker img {
     align-content: center;
-    height: 200px;
-    width: 180px;
+    height: 160px;
+    width: 140px;
     border-radius: 16px;
   }
-  .TextWrapper {
-    /* position: relative; */
-  
-    display: flex;
-    flex: 53%;
-    padding: 10px;
-    justify-content: center;
-    flex-direction: column;
-  }
-  .YoutubeImg {
-    flex: 45%;
-    width: 100%;
-    margin: 8px;
-  }
-  
-  .info {
-    display: flex;
-    flex-wrap: wrap;
-    /* flex-direction: row; */
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    align-items: flex-end;
-  }
-  
-  .Content {
-    text-align: left;
-  }
-  .Speaker {
-    flex: 30%;
-    position: relative;
-    padding: 5px;
-  }
-  .Speakerbio {
-    flex: 68%;
-    padding: 5px;
-    text-align: left;
-  }
-  
-  .ImgWrap {
-    width: 100%;
-    height: 0;
-    position: relative;
-    padding-top: 67%; /* 9 / 16 * 100 */
-  }
-  .ImgWrap > iframe {
-    width: 100%;
-    height: 100%;
-    position: absolute;
-    top: 0;
-    left: 0;
-    border: 0;
-  }
-  /* responsiveness for 900px*/
-  @media screen and (max-width: 900px) {
-    .YoutubeWrapper {
-      flex-direction: column;
-      padding: 15px;
-      margin-top: 20px;
-    }
-    .TextWrapper {
-      flex: 100%;
-      /* text-align: center;
-          align-items: center;
-          align-content: center; */
-      /* auto-align: center; */
-    }
-    .YoutubeImg {
-      flex: 100%;
-      text-align: center;
-      align-items: center;
-      align-content: center;
-    }
-    .Speaker img {
-      align-content: center;
-      height: 160px;
-      width: 140px;
-      border-radius: 16px;
-    }
-  }
-  
+}
