--- a/src/App.css
+++ b/src/App.css
@@ -150,8 +150,8 @@ h6{
 html{box-sizing:border-box}*,*:before,*:after{box-sizing:inherit}
 
 html{-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%}body{
-  margin:0;
-  overflow-x: hidden;}
+  margin:0;}
+/*overflow-x: hidden;*/
 article,aside,details,figcaption,figure,footer,header,main,menu,nav,section{display:block}summary{display:list-item}
 audio,canvas,progress,video{display:inline-block}progress{vertical-align:baseline}
 audio:not([controls]){display:none;height:0}[hidden],template{display:none}
