--- a/src/components/pc/pc_footer/styles2.css
+++ b/src/components/pc/pc_footer/styles2.css
@@ -6,7 +6,7 @@
     rgb(77, 50, 100),
     rgb(52, 12, 88)
   );
-  color: white;
+  color: rgb(198, 181, 201);
   min-height: 400px;
   /* height: auto; */
 }
