--- a/src/components/igs/IGS_Footer/styles4.css
+++ b/src/components/igs/IGS_Footer/styles4.css
@@ -32,6 +32,11 @@
   text-decoration: none;
   margin-bottom: 10px;
   font-size: 1.2em;
+
+}
+.footer2 .footer-content ul{
+  list-style-type: none;
+  margin-left: -30px;
 }
 .footer2 .footer-content ul .link:hover {
   color: white;
