--- a/src/components/pc/pc_footer/styles2.css
+++ b/src/components/pc/pc_footer/styles2.css
@@ -27,6 +27,10 @@
 .footer .footer-content h2 {
   color: white;
 }
+.footer .footer-content ul{
+  list-style-type: none;
+  margin-left: -30px;
+}
 .footer .footer-content ul .link {
   display: block;
   color: rgb(198, 181, 201);
