--- a/src/components/TheKnowledgeHunt/ConductionDetail/ConductionDetail.css
+++ b/src/components/TheKnowledgeHunt/ConductionDetail/ConductionDetail.css
@@ -2,13 +2,60 @@
     background-color: black;
     padding: 5%;
     /* min-height: 100vh; */
- 
+
 }
 
+.detailContainerTop {
+    max-width: 50%;
+    color: rgb(156, 156, 156);
+    margin-left: 50px;
+    margin-bottom: 20px;
+}
 
-.accordion-item{
+.detailContainerTop h2 {
+    font-family: Segoe UI;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 35px;
+    line-height: 50px;
+    color: #C6182F;
+}
+
+.detailContainerBottom {
+    background: #000000;
+    border: 1px solid #FFFFFF;
+    box-sizing: border-box;
+    border-radius: 20px;
+    display: flex;
+    color: rgb(156, 156, 156);
+    flex-direction: row;
+    padding: 8% 6%;
+    margin-bottom: 40px;
+    margin-top: 20px;
+}
+
+.detailHeading {
+    font-family: Segoe UI;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 22px;
+    line-height: 30px;
+    letter-spacing: -0.015em;
+}
+
+.detailContainerBottom ul li{
+    font-family: Segoe UI;
+    font-style: normal;
+    font-size: 20px;
+    line-height: 30px;
+    padding: 5px;
+    letter-spacing: -0.015em;
+}
+
+.accordion-item {
     border: none;
 }
+
 .accordion-button {
     background: #535353;
     color: white;
@@ -33,11 +80,12 @@
 
 .accordion-button:after {
     background-image: url("data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='%23ffffff'><path fill-rule='evenodd' d='M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z'/></svg>") !important;
-  }
+}
+
 .subjects {
     display: flex;
     flex-direction: row;
-    
+
 }
 
 .subject {
@@ -49,7 +97,7 @@
     border-right: 1px solid #DDDDDD;
 }
 
-.subject ul li {
+ul li {
     list-style-type: none;
 }
 
@@ -77,9 +125,21 @@
         padding: 5px;
 
     }
-
+.detailContainerBottom{
+    flex-direction: column;
+    padding: 6% 4%;
+}
+.detailContainerTop {
+    max-width: 70%;
+}
+.detailContainerTop h2 {
+   
+    font-size: 30px;
+    line-height: 40px;
+    color: #C6182F;
+}
     .subject:not(.last) {
-        border-right:none;
+        border-right: none;
     }
 }
 
