--- a/src/components/TheKnowledgeHunt/ConductionDetail/ConductionDetail.css
+++ b/src/components/TheKnowledgeHunt/ConductionDetail/ConductionDetail.css
@@ -188,3 +188,30 @@ margin-top: -5%;
     padding-top:80px;
     color:white;
 }
+.examination_link{
+    display: flex;
+    justify-content: space-around;
+    /* flex-direction: column;   */
+    flex-wrap: wrap;
+}
+.ZHS{
+    
+    border-radius: 10px;
+background: yellow;
+white-space: nowrap;
+padding: 10px 140px;
+color: black;
+font-size: 16px;
+outline: none;
+border: none;
+cursor: pointer;
+transition: all 0.2s ease-in-out;
+text-decoration: none;
+/* margin-top: -5%; */
+justify-content: space-around;
+}
+.ZHS:hover {
+    transition: all 0.2s ease-in-out;
+    background:#38218f;
+    color: white;
+}
